# NanoTracker

./: .gitattributes  .gitignore  CLAUDE.md  README.md  camera_config.example.json  gst_source.py  nano_tracker.py  pyproject.toml  requirements.txt  snap_planner.py  trt_engine.py
alpr/: README.md  __init__.py
alpr/cli/: label.py  report.py  run.py  score.py
alpr/eval/: metrics.py  report.py
alpr/pipelines/: base.py  bespoke.py  preferred.py  runner.py
docs/: setup_nano.md
scripts/: build_engine.sh  cap_reolink_shutter.py  debug_color.py  export_onnx.py  pull_session.py  recolor_session.py  setup_nano.sh
streettracker/: .gitignore  CLAUDE.md  README.md  pyproject.toml
streettracker/.github/workflows/: ci.yml
streettracker/configs/: botsort.yaml  camera.example.json
streettracker/src/streettracker/: __init__.py
streettracker/src/streettracker/analysis/: __init__.py  debug_color.py  recolor.py
streettracker/src/streettracker/cli/: __init__.py
streettracker/src/streettracker/common/: __init__.py  coco.py  color.py  hourly.py  output.py  schema.py  summary.py  types.py
streettracker/src/streettracker/device/: __init__.py
streettracker/src/streettracker/inference/: __init__.py  ultralytics_runner.py
streettracker/src/streettracker/sources/: __init__.py  base.py  file.py  rtsp.py
streettracker/tests/: conftest.py  test_smoke.py
streettracker/tests/test_analysis/: test_debug_color.py  test_recolor.py
streettracker/tests/test_common/: test_coco.py  test_color.py  test_hourly.py  test_output.py  test_schema.py  test_summary.py  test_types.py
streettracker/tests/test_inference/: test_ultralytics_runner.py
streettracker/tests/test_sources/: test_file_source.py  test_rtsp_source.py
