[project]
name = "nanotracker"
version = "0.1.0"
description = "Jetson Nano vehicle tracker: TensorRT YOLOv8 inference on a live Reolink RTSP H.265 stream via NVDEC"
requires-python = ">=3.6"
dependencies = [
    "numpy<1.20",
    "opencv-python==4.5.5.62",
    "Pillow<9",
]

# NOTE: This project does NOT use uv.  Jetson Nano runs Python 3.6.9 and most
# of its runtime deps (tensorrt, pycuda, GStreamer Python bindings) come from
# system apt packages, not PyPI wheels.  See docs/setup_nano.md.

[project.optional-dependencies]
# Dev-box only (Windows / macOS / Linux x86_64).  Used by scripts/export_onnx.py
# to convert YOLOv8n.pt to ONNX.  Not installed on the Nano.
export = [
    "ultralytics>=8.0,<9.0",
    "torch",
    "torchvision",
    "onnx",
    "onnxsim",
]
