[project]
name = "nanotracker"
version = "0.1.0"
description = "Jetson Nano vehicle tracker: TensorRT YOLOv8 inference on a live Reolink RTSP H.265 stream via NVDEC"
requires-python = ">=3.6"
# Base dependencies intentionally empty.  The Nano installs its Python-3.6-pinned
# runtime (numpy<1.20, Pillow<9, system opencv from apt) via `pip install -r
# requirements.txt`, NOT via this package — see scripts/setup_nano.sh.  Putting
# those pins here used to make `pip install -e .[export]` / `.[alpr]` on the
# dev box (Python 3.10+) try to build numpy 1.19 from sdist, which fails.
dependencies = []

# NOTE: This project does NOT use uv.  Jetson Nano runs Python 3.6.9 and most
# of its runtime deps (tensorrt, pycuda, GStreamer Python bindings) come from
# system apt packages, not PyPI wheels.  See docs/setup_nano.md.

[project.optional-dependencies]
# Dev-box only (Windows / macOS / Linux x86_64).  Used by scripts/export_onnx.py
# to convert YOLOv8n.pt to ONNX.  Not installed on the Nano.
export = [
    "ultralytics>=8.0,<9.0",
    "torch",
    "torchvision",
    "onnx",
    "onnxsim",
]

# Dev-box only.  Post-processing ALPR pass over pulled main snaps; see alpr/README.md.
# easyocr pulls torch (already in [export]); fast-plate-ocr + open-image-models are ONNX only.
alpr = [
    "ultralytics>=8.0,<9.0",
    "easyocr>=1.7,<2.0",
    "fast-plate-ocr>=0.3",
    "open-image-models>=0.2",
    "onnxruntime>=1.17",
    "jinja2>=3.1",
    "opencv-python>=4.5",
    "numpy>=1.22",
]
